opam-version: "2.0"
maintainer: "Louis Mandel <louis.mandel@reactiveml.org>"
authors: [
  "Nicolas Pouillard"
  "Berke Durak"
  "Cedric Pasteur"
  "Louis Mandel"
]
homepage: "https://github.com/reactiveml/rmlbuild/"
bug-reports: "https://github.com/reactiveml/rmlbuild/issues"
license: "LGPL-2 with OCaml linking exception"
dev-repo: "https://github.com/reactiveml/rmlbuild.git"
synopsis:
  "rmlbuild is a fork of ocamlbuild that handles ReactiveML projets"

build: [
  [
    make
    "-f"
    "configure.make"
    "all"
    "OCAMLBUILD_PREFIX=%{prefix}%"
    "OCAMLBUILD_BINDIR=%{bin}%"
    "OCAMLBUILD_LIBDIR=%{lib}%"
    "OCAMLBUILD_MANDIR=%{man}%"
    "OCAML_NATIVE=%{ocaml:native}%"
    "OCAML_NATIVE_TOOLS=%{ocaml:native}%"
  ]
  [make "check-if-preinstalled" "all" "opam-install"]
]

conflicts: [
  "base-ocamlbuild"
  "ocamlfind" {< "1.6.2"}
]

depends: [
  "ocaml" {>= "4.03"}
]
